<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tvStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_service_status"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/tvServiceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_stopped"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tvStatusLabel"
        app:layout_constraintStart_toEndOf="@id/tvStatusLabel"/>

    <TextView
        android:id="@+id/tvMaxVolLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_max_volume_music"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvStatusLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"/>

    <SeekBar
        android:id="@+id/seekBarMaxVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        app:layout_constraintTop_toBottomOf="@id/tvMaxVolLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvMaxVolValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50%"
        app:layout_constraintTop_toBottomOf="@id/seekBarMaxVolume"
        app:layout_constraintEnd_toEndOf="@id/seekBarMaxVolume"/>

    <Button
        android:id="@+id/btnToggleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_service"
        app:layout_constraintTop_toBottomOf="@id/tvMaxVolValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <Button
        android:id="@+id/btnSetPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pin_title"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/btnToggleService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
